--- a/day25/Makefile
+++ b/day25/Makefile
@@ -1,6 +1,6 @@
 #########################################################################################\
 #		-MAKEFILE-																		#\
-#		PROJECT: AOC_2023 - day 17														#\
+#		PROJECT: AOC_2023 - day 25 - Merry christmas									#\
 #########################################################################################
 
 NAME = $(BIN_DIR)bin.exe
@@ -29,9 +29,7 @@ Sources & objects
 ########################################################################################
 
 FILES	=	main					\
-			dijkstra				\
-			dijkstra_node			\
-			dijkstra_prints			\
+			edge					\
 			lst_utils				\
 			queue					\
 			utils					\
